Attempt to fix #508 config file churning on Forge